ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__escape_char_in_byte_literal.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..13,
            value: Constant(
                ExprConstant {
                    range: 0..13,
                    value: Bytes(
                        [
                            111,
                            109,
                            107,
                            109,
                            111,
                            107,
                            92,
                            88,
                            97,
                            97,
                        ],
                    ),
                    kind: None,
                },
            ),
        },
    ),
]
