ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__form_feed_alias.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..15,
            value: Constant(
                ExprConstant {
                    range: 0..15,
                    value: Str(
                        "\u{c}",
                    ),
                    kind: None,
                },
            ),
        },
    ),
]
