ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__fstring_parse_self_documenting_base.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Constant(
        ExprConstant {
            range: 2..9,
            value: Str(
                "user=",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 2..9,
            value: Str(
                "",
            ),
            kind: None,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            range: 2..9,
            value: Name(
                ExprName {
                    range: 3..7,
                    id: "user",
                    ctx: Load,
                },
            ),
            conversion: Repr,
            format_spec: None,
        },
    ),
]
