ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_self_doc_prec_space.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Constant(
        ExprConstant {
            range: 2..9,
            value: Str(
                "x   =",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 2..9,
            value: Str(
                "",
            ),
            kind: None,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            range: 2..9,
            value: Name(
                ExprName {
                    range: 3..4,
                    id: "x",
                    ctx: Load,
                },
            ),
            conversion: Repr,
            format_spec: None,
        },
    ),
]
